# opengl-tutorial

./: .clang-format  .gitignore  README.md  app.cpp  app.h  index_buffer.cpp  index_buffer.h  main.cpp  meson.build  program.cpp  program.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
shaders/: shader.frag  shader.vert
subprojects/: glfw.wrap
